--- a/parts/CDVO.tex
+++ b/parts/CDVO.tex
@@ -1175,6 +1175,7 @@
 		\end{proof}
 	\end{proposition}
 	\begin{theorem}
+		\label{thm:podem partir les integrals Riemann}
 		Siguin \({{\mathfrak{R}}}\subset\mathbb{R}^{d}\) un rectangle, \(\mathcal{S}\) un conjunt de rectangles disjunts de \(\mathfrak{R}\) tals que \(\bigcup_{S\in\mathcal{S}}S=\mathfrak{R}\) i \(f\colon\mathfrak{R}\to\mathbb{R}\) una funció acotada. Aleshores \(f\) és integrable Riemann en \(\mathfrak{R}\) si i només si \(f\) és integrable Riemann en cada \(S\in\mathcal{S}\), i
 		\[\int_{\mathfrak{R}}f=\sum_{S\in\mathcal{S}}\int_{S}f.\]
 		\begin{proof}
@@ -1194,7 +1195,7 @@
 		\end{proof}
 	\end{theorem}
 	\begin{theorem}
-		\label{thm:la norma d'una integral és menos que l'integral de la norma}
+		\label{thm:la norma d'una integral és menys que l'integral de la norma}
 		Siguin \(\mathfrak{R}\subset\mathbb{R}^{d}\) un rectangle i \(f\colon\mathfrak{R}\to\mathbb{R}\) una funció integrable Riemann amb \(\abs{f(x)}\leq M\) per a tot \(x\in \mathfrak{R}\). Aleshores la funció \(\abs{f}\) és integrable Riemann i
 		\[\abs{\int_{\mathfrak{R}}f}\leq\int_{\mathfrak{R}}\abs{f}\leq M\abs{\mathfrak{R}}.\]
 		\begin{proof}
