--- a/parts/Topologia.tex
+++ b/parts/Topologia.tex
@@ -1337,7 +1337,7 @@
 		\end{proof}
 	\end{theorem}
 	\begin{lemma}
-		\label{lemma:els elements del quocient d'un Hausdorff compacte per un grup finit són tancats en l'espai original}
+		\label{lema:els elements del quocient d'un Hausdorff compacte per un grup finit són tancats en l'espai original}
 		Siguin \(G\) un grup finit que actua sobre un espai Hausdorff compacte \(X\) i \(x\) un punt de \(X\). Aleshores \(\overline{x}\) és un tancat de \(X\).
 		\begin{proof}
 			Per la definició de \myref{def:classe d'equivalència} trobem que
@@ -1354,7 +1354,7 @@
 		\label{thm:el quocient d'un Hausdorff compacte per un grup finit és Hausdorff compacte}
 		Sigui \(G\) un grup finit que actua sobre un espai Hausdorff compacte \(X\). Aleshores \(X/G\) és un espai Hausdorff compacte.
 		\begin{proof} % http://math.ucr.edu/~res/math205C-2011/freeactions.pdf % Revisar
-			Siguin \(x\) i \(y\) dos punts de \(X\) tals que \(\overline{x}\) és diferent de \(\overline{y}\). Pel lema \myref{lemma:els elements del quocient d'un Hausdorff compacte per un grup finit són tancats en l'espai original} trobem que \(\overline{y}\) és un tancat, i per la proposició \myref{prop:els punts en un Hausdorff són tancats} trobem que el conjunt \(\{x\}\) és un tancat.
+			Siguin \(x\) i \(y\) dos punts de \(X\) tals que \(\overline{x}\) és diferent de \(\overline{y}\). Pel lema \myref{lema:els elements del quocient d'un Hausdorff compacte per un grup finit són tancats en l'espai original} trobem que \(\overline{y}\) és un tancat, i per la proposició \myref{prop:els punts en un Hausdorff són tancats} trobem que el conjunt \(\{x\}\) és un tancat.
 			
 			Per hipòtesi tenim que \(X\) és un espai Hausdorff compacte, i pel Teorema \myref{thm:els espais Hausdorff compactes són espais normals} trobem que \(X\) és un espai normal. Aleshores per la definició d'\myref{def:espai normal} trobem que existeixen dos oberts disjunts \(\obert{U}'\) i \(\obert{V}'\) tals que \(\{x\}\) és un subconjunt de \(\obert{U}'\) i \(\overline{y}\) és un subconjunt de \(\obert{V}'\).
 			
